<resources>
    <string name="app_name">Health Habits</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_big">Title Big</string>
    <string name="buttonadd">buttonadd</string>
    <string name="add_a_habit">Add a habit!</string>
    <string name="this_is_some_placeholder_text_for_the_intro_screen">This is some placeholder text for the intro screen</string>
    <string name="habit_title">Habit title</string>
    <string name="give_it_a_short_description">Give it a short description</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="date_not_selected">Date: (not selected)</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="time_not_selected">Time: (not selected)</string>
    <string name="confirm">Confirm</string>
    <string name="icon">icon</string>
    <string name="start_making_new_habits">Start making new habits!</string>
    <string name="page_1">Welcome to Health Habits!</string>
    <string name="page_2">Here you can add and track your habits ✌</string>
    <string name="page_3">You are able add a day and hour to start them and do a proper follow up! 😀</string>
</resources>